--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
-  background-color: var(--translucentBlackMask);
+  background-color: var(--translucent-black-mask);
 }
 
 .pagination-container {
