use the `--fix` flag to update CSS to comply with `stylelint` rule "alpha-value-notation" -- alpha values should always use percentage notation.

--- a/pexels-photo-search/src/index.css
+++ b/pexels-photo-search/src/index.css
@@ -17,7 +17,7 @@ html {
   --scrollbar-thumb-color: var(--darker);
 
   /* darken photos on hover */
-  --translucent-black-mask: rgb(0 0 0 / 0.055);
+  --translucent-black-mask: rgb(0 0 0 / 5.5%);
 
   /* other colors */
   --white: #ffffff;
