--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -4,7 +4,7 @@
   top: 0;
   display: flex;
   width: 100%;
-  height: 11rem;
+  height: 12rem;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: flex-start;
@@ -18,6 +18,14 @@
   width: 100%;
   flex-direction: row;
   background-color: inherit;
+}
+
+.navbar-row.top-row {
+  height: 10rem;
+}
+
+.navbar-row.top-row > .left-nav > .spinning-icon-component {
+  margin-top: 1rem;
 }
 
 .left-nav {
@@ -65,11 +73,12 @@
 
 .home-icon {
   justify-content: flex-end;
+  margin-top: 2.5rem;
 }
 
 .navbar-title {
   display: inherit;
-  margin-top: 0.5rem;
+  margin-top: 2rem;
   font-size: calc(16px + 1vmin);
 }
 
