--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -4,7 +4,7 @@
   top: 0;
   display: flex;
   width: 100%;
-  height: 12rem;
+  height: 12.5rem;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: flex-start;
@@ -47,28 +47,22 @@
 }
 
 .navbar-row.row-1 {
-  height: 10rem;
+  height: 8rem;
 }
 
 .navbar-row.row-1 > .left-nav {
-  margin-left: 1rem;
+  align-items: center;
 }
 
 .navbar-row.row-1 > .left-nav > .spinning-icon-component {
   margin-top: 1rem;
-}
-
-.navbar-row.row-1 > .center-nav {
-  margin-top: 0.75rem;
-}
-
-.navbar-row.row-1 > .right-nav {
-  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .navbar-row.row-1 > .right-nav > .home-icon {
   justify-content: flex-end;
   margin-top: 2.5rem;
+  margin-right: 1rem;
 }
 
 .navbar-row.row-1 > .center-nav > .title-container {
@@ -154,18 +148,31 @@
   width: 6rem;
 }
 
-.navbar-row.row-2 > .left-nav {
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar-row.row-2 > .right-nav {
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar-row.row-3 {
+.navbar-row.row-2 {
   height: 2rem;
   align-items: center;
   justify-content: center;
+}
+
+.navbar-row.row-3 > .left-nav {
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-row.row-3 > .right-nav {
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-row.row-4 {
+  height: 1.5rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-row.row-5 {
+  height: 2rem;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
