--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -4,28 +4,23 @@
   bottom: 0;
   display: flex;
   width: 100%;
-  height: 10rem;
+  height: 5rem;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(5px + 1vmin);
 }
 
 .footer-component > .footer-column {
   display: flex;
   flex-direction: column;
-  justify-items: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-component > .footer-column > .copyright {
   margin-top: 0.5rem;
-  margin-bottom: 0.25rem;
-}
-
-.footer-component > .footer-column > .personal-links-component {
-  margin-top: 0.25rem;
-  margin-bottom: 0.5rem;
+  font-size: calc(3px + 1vmin);
 }
 
 .footer-component > .left-nav {
@@ -44,7 +39,7 @@
 
 .footer-component > .center-nav {
   display: inherit;
-  font-size: calc(4px + 1vmin);
+  font-size: inherit;
 }
 
 .footer-component > .right-nav {
