update the `PageNumber` component inside of the `Navbar` -- change color from "darkest" to "darker"; adjust position; make all text bold

--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -176,3 +176,8 @@
   justify-content: center;
   margin-bottom: 1rem;
 }
+
+.navbar-row.row-5 > span.page-number {
+  margin-top: 0.25rem;
+  color: var(--darker);
+}
